Add a checkbox to control resizeing the JScrollPane.